API.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horoscopeapi
  labels:
    app: horoscopeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: horoscopeapi
  template:
    metadata:
      labels:
        app: horoscopeapi
    spec:
      containers:
      - name: horoscopeapi
        image: xinoji/api:11.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels: 
    app: api-service
spec:
  selector:
    app: horoscopeapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  sessionAffinity: None
