dep-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horoscopemirror
  labels:
    app: horoscopemirror
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: horoscopemirror
  template:
    metadata:
      labels:
        app: horoscopemirror  
    spec:
      containers:
      - name: horoscopemirror
        image: xinoji/horoscope:19.2
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: mirror-service
  labels:
    app: mirror-service
spec:
  selector:
    app: horoscopemirror
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  sessionAffinity: None
