virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: horoscope-service-ingress
spec:
  hosts: 
  - '*'
  gateways:
  - horoscope-gateway
  http:
  - match:
    - uri:
        prefix: /client
    rewrite:
        uri: /
    route:
    - destination:
        host: horoscope-service
        port:
          number: 8080
      weight: 50
    - destination:
        host: mirror-service
        port:
          number: 8080
      weight: 50
  - match:
    - uri:
        prefix: /zodiac/
    rewrite:
        uri: /
    route:
    - destination:
        host: api-service
        port:
          number: 8080
  - match:
    - uri:
        prefix: /Data/
    rewrite:
        uri: /
    route:
    - destination:
        host: database-service
        port:
          number: 47300
